<resources>
    <string name="app_name">Shows-JurenIvan</string>
    <string name="login">LOG IN</string>
    <string name="password">Password</string>
    <string name="userName">Username</string>
    <string name="email_required">E-mail required</string>
    <string name="addEpisode">Add episode</string>
    <string name="save">Save</string>
    <string name="uploadPhoto">Upload photo</string>
    <string name="episodeTitle">Episode title</string>
    <string name="episodeDescripiton">Episode description</string>
    <string name="small_camera_picture">small camera picture</string>
    <string name="seasonEpisode">S01 E01</string>
    <string name="description">episodeTitle</string>
    <string name="shows">Shows</string>
    <string name="episodes">Episodes</string>
    <string name="fallenAsleep">Someone has fallen asleep. Don\'t wake him up.</string>
    <string name="somebodyFallenAsleep">Someone has fallen asleep.</string>
    <string name="dontWakeHimUp">Don’t wake him up.</string>
    <string name="addSomeEpisodes">Add some episodes</string>
    <string name="seasonAndEpisode">Season &amp; episode</string>
    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="saveCapital">SAVE</string>
    <string name="youreIn">You\'re in!</string>
    <string name="placeholder">Lorem Ipsum</string>
    <string name="changePhoto">Change Photo</string>
    <string name="rememberMe">Remember me</string>
    <string name="confirmBack">Confirm back</string>
    <string name="discardChanges">Do you want to discard all changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="premissionNeeded">Permission needed!</string>
    <string name="whichPermission">permission is needed for this action, please enable it.</string>
    <string name="OK">OK</string>
    <string name="passwordAgain">Password again</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="shows_lowercase">shows</string>
    <string name="sorry_we_don_t_have_comments_yet">Sorry, we don’t have comments yet.</string>
    <string name="be_first_who_will_write_review">Be first who will write a review.</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="post">Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comments</string>
    <string name="welcome">Welcome</string>
</resources>
