<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:navigationIcon="?attr/homeAsUpIndicator"
                app:title="@string/addEpisode"
        />
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            android:id="@+id/linearLayout">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:gravity="center">


            <ImageView
                    android:id="@+id/image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"

                    android:src="@drawable/ic_camera"

                    android:layout_marginTop="45dp"
                    android:contentDescription="@string/small_camera_picture"/>

            <TextView
                    android:id="@+id/addImageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadPhoto"
                    android:textSize="14sp"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/episodeTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:errorEnabled="true"

        >

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/episodeTitle"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/episodeTitle"
                    android:inputType="text"
                    android:textSize="16sp"
            />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/episodeDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                app:errorEnabled="true"

        >

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/episodeDescription"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/episodeDescripiton"
                    android:inputType="text"
                    android:textSize="16sp"

            />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:background="@drawable/button_selector"

            android:text="@string/save"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="4sp"
            android:textAlignment="center"

            android:enabled="false"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="30dp"
    />


</android.support.constraint.ConstraintLayout>