<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.example.shows_jurenivan.ui.CustomImageView
                android:id="@+id/android_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_img_logo_mark"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/userNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/android_logo"

                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"

                app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/tvUsername"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/userName"
                    android:inputType="text"
                    style="@style/TextInputFields"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/userNameLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/ic_show_password_red"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:passwordToggleTint="@color/colorAccent">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordTextEditor"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    style="@style/TextInputFields"
                    android:inputType="textPassword"
            />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
                android:text="@string/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rememberMeCheckBox"

                android:textSize="16sp"
                android:textColor="#505050"
                android:lineSpacingExtra="6sp"

                android:checked="false"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
                app:layout_constraintStart_toStartOf="parent"/>

        <Button
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rememberMeCheckBox"

                android:gravity="center"
                android:background="@drawable/button_selector"

                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="4sp"
                android:textAlignment="center"

                android:layout_marginTop="32dp"
                android:enabled="false"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"/>

        <TextView

                android:text="@string/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"

                android:textSize="14sp"
                android:textColor="#505050"
                android:lineSpacingExtra="16sp"
                android:gravity="center_horizontal"

                app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

        <TextView
                android:text="@string/create_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createAccount"

                android:textSize="14sp"
                android:textColor="#ff758c"
                android:lineSpacingExtra="8sp"
                android:gravity="center_horizontal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                />


    </android.support.constraint.ConstraintLayout>

</ScrollView>