<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                android:navigationIcon="?attr/homeAsUpIndicator"/>
    </android.support.design.widget.AppBarLayout>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            android:id="@+id/showDescriptionScrollView"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="30dp"
    >



        <TextView
                android:id="@+id/showDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#505050"
                android:textSize="16dp"
                android:lineSpacingExtra="8sp"/>

    </ScrollView>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/episodes"
            android:textSize="20sp"
            android:textColor="#2e2e2e"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/showDescriptionScrollView"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
    />

    <ListView
            android:id="@+id/listOfItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alwaysDrawnWithCache="true"
            android:dividerHeight="1dp"
            android:horizontalSpacing="3dp"
            android:scrollingCache="true"
            android:smoothScrollbar="true"
            android:stretchMode="columnWidth"
            android:verticalSpacing="3dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:divider="@null"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">

    </ListView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/noEntriesLayout"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_img_placeholder_episodes"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/somebodyFallenAsleep"
                android:textColor="@color/showsTitleColor"
                android:gravity="center_horizontal"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dontWakeHimUp"
                android:textColor="@color/showsTitleColor"
                android:gravity="center_horizontal"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addSomeEpisodes"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"/>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            app:layout_goneMarginEnd="20dp"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>
