<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/seasonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:id="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"/>


        <NumberPicker
                android:id="@+id/seasonNumberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"

        />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
            android:id="@+id/episodeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/seasonLayout"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintBottom_toTopOf="@+id/saveButton"
            android:layout_marginBottom="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episode"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/textView4"/>

        <NumberPicker
                android:layout_marginTop="8dp"
                android:id="@+id/episodeNumberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView4"

        />
    </android.support.constraint.ConstraintLayout>
    <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"
    />

</android.support.constraint.ConstraintLayout>